[package]
name = "doctor-who-rs"
version = "0.1.0"
edition = "2021"
authors = ["David Angell <davidjangell42@gmail.com>"]
# license = "MIT"
description = "A rust wrapper for the dana-ross's catalogopolis-api to retrieve information on Doctor Who episodes and related data"
repository = "https://github.com/DavidAngell/doctor-who-rs"
readme = "README.md"
keywords = ["rust", "doctor who", "api", "wrapper"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
# reqwest = "0.11.22"
serde = "1.0.192"
serde_derive = "1.0.192"
serde_json = "1.0.108"